--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
       "emitDecoratorMetadata": true
     },
     "include": [
-      "./src/**/*"
+      "./src/**/*",
+      "./jest.config.js"
     ],
     "exclude": [
       "node_modules/**"
