--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
+    "mysql": "^2.18.1",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.1.0",
     "typeorm": "^0.2.24"
   },
   "devDependencies": {
