--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint ./src/**/*",
     "serve": "node dist/app.js",
     "start": "npm run serve",
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
     "watch": "nodemon ./src/app.ts",
     "watch-ts": "tsc --watch"
   },
@@ -20,6 +20,7 @@
     "@hapi/joi": "^17.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http-status-codes": "^1.4.0",
     "lodash": "^4.17.15",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
@@ -32,6 +33,7 @@
     "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.11.0",
+    "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "eslint": "^6.8.0",
@@ -40,6 +42,7 @@
     "eslint-plugin-import": "^2.20.2",
     "jest": "^25.2.7",
     "nodemon": "^2.0.2",
+    "supertest": "^4.0.2",
     "ts-jest": "^25.3.1",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
