--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@types/uuid": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-status-codes": "^1.4.0",
@@ -25,7 +26,8 @@
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.1.0",
-    "typeorm": "^0.2.24"
+    "typeorm": "^0.2.24",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.4",
